WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116444
[iOS] media/event-queue-crash.html ASSERTs in notifyChildInserted
https://bugs.webkit.org/show_bug.cgi?id=116444
Summary
[iOS] media/event-queue-crash.html ASSERTs in notifyChildInserted
Eric Carlson
Reported
2013-05-20 09:54:22 PDT
The fix in
r114258
was not included for ENABLE(PLUGIN_PROXY_FOR_VIDEO).
Attachments
Proposed patch
(1.30 KB, patch)
2013-05-20 10:13 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2013-05-20 10:13:33 PDT
Created
attachment 202286
[details]
Proposed patch
Jer Noble
Comment 2
2013-05-20 10:17:48 PDT
Comment on
attachment 202286
[details]
Proposed patch Awesome, I had been meaning to look into this one.
Eric Carlson
Comment 3
2013-05-20 10:18:10 PDT
<
rdar://problem/13093696
>
Eric Carlson
Comment 4
2013-05-20 10:21:20 PDT
Committed in
https://trac.webkit.org/r150372
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug