[iOS] media/event-queue-crash.html ASSERTs in notifyChildInserted https://bugs.webkit.org/show_bug.cgi?id=116444

Reviewed by Jer Noble.

No new tests, covered by existing tests.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::configureMediaControls): Only create media controls when the
    element is in a Document.


Canonical link: https://commits.webkit.org/134789@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150372 268f45cc-cd09-0410-ab3c-d52691b4dbfc